# python-template

./: .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  code-checks.yml  codecov.yml  copilot-setup-steps.yml  docs.yml  publish.yml
docs/source/: conf.py  index.rst
doctrees/: environment.pickle  index.doctree
html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_static/: documentation_options.js
my_pkg/: __init__.py
tests/: test_init.py
tests/docs/: test_docs.py
