[project]
name = "my-pkg"
dynamic = ["version"]
description = ""
authors = [
    {name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4"

keywords = [
    "python"
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "hypothesis>=6.23.3",
    "pre-commit>=2.20.0",
    "pre-commit-uv>=4",
    "pytest-cov>=4.0.0",
    "mypy==1.13.0",
    "pytest-parametrization>=2022",
    "ruff>=0.8.2",
]

[tool.hatch.build.targets.sdist]
only-include = ["my_pkg",]
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["my_pkg",]
source = "."



[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.optional-dependencies]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**",]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E","A","N"]

fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false


[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
