[project]
name = "my-pkg" # todo: change to your package name
dynamic = ["version"]
description = ""
authors = [
    { name = "DanielAvdar", email = "66269169+DanielAvdar@users.noreply.github.com" }, # todo: change to your name and email
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

keywords = [
    "python"
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "hypothesis>=6.23.3",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.26.0",
    "mypy==1.18.2",
    "pytest-parametrization>=2022",

]
docs = [
    "sphinx>=8.2.0; python_version >= '3.11'",
    "sphinx>=7.0.0; python_version < '3.11'",
    "sphinx-rtd-theme>=3.0.2",
]
[tool.hatch.build.targets.sdist]
only-include = ["my_pkg", ] # todo: change to your package name
source = "."

[tool.hatch.build.targets.wheel]
only-include = ["my_pkg", ] # todo: change to your package name
source = "."



[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.optional-dependencies]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "tests/**", ]

[tool.ruff.lint]
select = ["F", "B", "I", "F", "W", "E", "A", "N", "D","DOC"]

fixable = ["ALL"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "DOC"]
"docs/*" = ["D", "DOC"]
[tool.ruff.lint.isort]
combine-as-imports = true
[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = false
